grammar/PieroguszParser.py
# Generated from Pierogusz.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PieroguszParser ( Parser ):

    grammarFileName = "Pierogusz.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'then'", "'else'", "'eif'", "'loop'", 
                     "'function'", "'print'", "'read'", "'toInt'", "'toFloat'", 
                     "'toString'", "'&&'", "'||'", "'^^'", "'=='", "'!='", 
                     "'>'", "'>='", "'<'", "'<='", "'='", "','", "';'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "'int'", 
                     "'float'", "'float32'", "'float64'", "'string'", "'bool'", 
                     "'struct'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'true'", "'false'", "'+'", "'-'", "'*'", 
                     "'/'", "'.'", "'!'", "'\"'" ]

    symbolicNames = [ "<INVALID>", "IF", "THEN", "ELSE", "ENDIF", "LOOP", 
                      "FUNCTION", "PRINT", "READ", "TO_INT", "TO_FLOAT", 
                      "TO_STRING", "AND", "OR", "XOR", "EQ", "NEQ", "GT", 
                      "GTE", "LT", "LTE", "ASSIGN", "COMMA", "SEMI", "LPAREN", 
                      "RPAREN", "LCURLY", "RCURLY", "LBRACK", "RBRACK", 
                      "INT_KEY", "FLOAT_KEY", "FLOAT_32_KEY", "FLOAT_64_KEY", 
                      "STRING_KEY", "BOOL_KEY", "STRUCT", "FLOAT", "INT", 
                      "STRING", "BOOL", "TRUE", "FALSE", "PLUS", "MINUS", 
                      "ASTERISK", "SLASH", "DOT", "EXCLAMATION", "DQ", "ID", 
                      "WS" ]

    RULE_prog = 0
    RULE_block = 1
    RULE_statement = 2
    RULE_variableDeclaration = 3
    RULE_assignment = 4
    RULE_printCall = 5
    RULE_readCall = 6
    RULE_expression = 7
    RULE_logicalExpression = 8
    RULE_simpleLogicalExpression = 9
    RULE_additiveExpression = 10
    RULE_multiplicativeExpression = 11
    RULE_unaryExpression = 12
    RULE_primaryExpression = 13
    RULE_ifElseStatement = 14
    RULE_ifStatement = 15
    RULE_ifBlock = 16
    RULE_elseBlock = 17
    RULE_condition = 18
    RULE_comparisonExp = 19
    RULE_functionDefinition = 20
    RULE_functionName = 21
    RULE_functionParams = 22
    RULE_functionBlock = 23
    RULE_functionCall = 24
    RULE_functionArguments = 25
    RULE_loopTimes = 26
    RULE_repetitions = 27
    RULE_loopBlock = 28
    RULE_structureDefinition = 29
    RULE_structureDeclaration = 30
    RULE_structFieldDef = 31
    RULE_structureInstantiation = 32
    RULE_fieldInitializationList = 33
    RULE_fieldInitialization = 34
    RULE_fieldAccess = 35
    RULE_conversion = 36
    RULE_value = 37
    RULE_dataType = 38
    RULE_structureType = 39

    ruleNames =  [ "prog", "block", "statement", "variableDeclaration", 
                   "assignment", "printCall", "readCall", "expression", 
                   "logicalExpression", "simpleLogicalExpression", "additiveExpression", 
                   "multiplicativeExpression", "unaryExpression", "primaryExpression", 
                   "ifElseStatement", "ifStatement", "ifBlock", "elseBlock", 
                   "condition", "comparisonExp", "functionDefinition", "functionName", 
                   "functionParams", "functionBlock", "functionCall", "functionArguments", 
                   "loopTimes", "repetitions", "loopBlock", "structureDefinition", 
                   "structureDeclaration", "structFieldDef", "structureInstantiation", 
                   "fieldInitializationList", "fieldInitialization", "fieldAccess", 
                   "conversion", "value", "dataType", "structureType" ]

    EOF = Token.EOF
    IF=1
    THEN=2
    ELSE=3
    ENDIF=4
    LOOP=5
    FUNCTION=6
    PRINT=7
    READ=8
    TO_INT=9
    TO_FLOAT=10
    TO_STRING=11
    AND=12
    OR=13
    XOR=14
    EQ=15
    NEQ=16
    GT=17
    GTE=18
    LT=19
    LTE=20
    ASSIGN=21
    COMMA=22
    SEMI=23
    LPAREN=24
    RPAREN=25
    LCURLY=26
    RCURLY=27
    LBRACK=28
    RBRACK=29
    INT_KEY=30
    FLOAT_KEY=31
    FLOAT_32_KEY=32
    FLOAT_64_KEY=33
    STRING_KEY=34
    BOOL_KEY=35
    STRUCT=36
    FLOAT=37
    INT=38
    STRING=39
    BOOL=40
    TRUE=41
    FALSE=42
    PLUS=43
    MINUS=44
    ASTERISK=45
    SLASH=46
    DOT=47
    EXCLAMATION=48
    DQ=49
    ID=50
    WS=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PieroguszParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PieroguszParser.StatementContext)
            else:
                return self.getTypedRuleContext(PieroguszParser.StatementContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(PieroguszParser.SEMI)
            else:
                return self.getToken(PieroguszParser.SEMI, i)

        def getRuleIndex(self):
            return PieroguszParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = PieroguszParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 80
                self.statement()
                self.state = 81
                self.match(PieroguszParser.SEMI)
                self.state = 85 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1126036272054754) != 0)):
                    break

            self.state = 87
            self.match(PieroguszParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCURLY(self):
            return self.getToken(PieroguszParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(PieroguszParser.RCURLY, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PieroguszParser.StatementContext)
            else:
                return self.getTypedRuleContext(PieroguszParser.StatementContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(PieroguszParser.SEMI)
            else:
                return self.getToken(PieroguszParser.SEMI, i)

        def getRuleIndex(self):
            return PieroguszParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = PieroguszParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(PieroguszParser.LCURLY)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1126036272054754) != 0):
                self.state = 90
                self.statement()
                self.state = 91
                self.match(PieroguszParser.SEMI)
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 98
            self.match(PieroguszParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(PieroguszParser.VariableDeclarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(PieroguszParser.AssignmentContext,0)


        def printCall(self):
            return self.getTypedRuleContext(PieroguszParser.PrintCallContext,0)


        def readCall(self):
            return self.getTypedRuleContext(PieroguszParser.ReadCallContext,0)


        def ifElseStatement(self):
            return self.getTypedRuleContext(PieroguszParser.IfElseStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(PieroguszParser.IfStatementContext,0)


        def functionDefinition(self):
            return self.getTypedRuleContext(PieroguszParser.FunctionDefinitionContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(PieroguszParser.FunctionCallContext,0)


        def loopTimes(self):
            return self.getTypedRuleContext(PieroguszParser.LoopTimesContext,0)


        def structureDefinition(self):
            return self.getTypedRuleContext(PieroguszParser.StructureDefinitionContext,0)


        def getRuleIndex(self):
            return PieroguszParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = PieroguszParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.variableDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 101
                self.assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 102
                self.printCall()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 103
                self.readCall()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 104
                self.ifElseStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 105
                self.ifStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 106
                self.functionDefinition()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 107
                self.functionCall()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 108
                self.loopTimes()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 109
                self.structureDefinition()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dataType(self):
            return self.getTypedRuleContext(PieroguszParser.DataTypeContext,0)


        def ID(self):
            return self.getToken(PieroguszParser.ID, 0)

        def structureDeclaration(self):
            return self.getTypedRuleContext(PieroguszParser.StructureDeclarationContext,0)


        def getRuleIndex(self):
            return PieroguszParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)




    def variableDeclaration(self):

        localctx = PieroguszParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variableDeclaration)
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.dataType()
                self.state = 113
                self.match(PieroguszParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.structureDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(PieroguszParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(PieroguszParser.ExpressionContext,0)


        def ID(self):
            return self.getToken(PieroguszParser.ID, 0)

        def fieldAccess(self):
            return self.getTypedRuleContext(PieroguszParser.FieldAccessContext,0)


        def getRuleIndex(self):
            return PieroguszParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = PieroguszParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 118
                self.match(PieroguszParser.ID)
                pass

            elif la_ == 2:
                self.state = 119
                self.fieldAccess()
                pass


            self.state = 122
            self.match(PieroguszParser.ASSIGN)
            self.state = 123
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(PieroguszParser.PRINT, 0)

        def LPAREN(self):
            return self.getToken(PieroguszParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PieroguszParser.RPAREN, 0)

        def ID(self):
            return self.getToken(PieroguszParser.ID, 0)

        def fieldAccess(self):
            return self.getTypedRuleContext(PieroguszParser.FieldAccessContext,0)


        def getRuleIndex(self):
            return PieroguszParser.RULE_printCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintCall" ):
                listener.enterPrintCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintCall" ):
                listener.exitPrintCall(self)




    def printCall(self):

        localctx = PieroguszParser.PrintCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_printCall)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(PieroguszParser.PRINT)
            self.state = 126
            self.match(PieroguszParser.LPAREN)
            self.state = 129
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 127
                self.match(PieroguszParser.ID)
                pass

            elif la_ == 2:
                self.state = 128
                self.fieldAccess()
                pass


            self.state = 131
            self.match(PieroguszParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReadCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READ(self):
            return self.getToken(PieroguszParser.READ, 0)

        def LPAREN(self):
            return self.getToken(PieroguszParser.LPAREN, 0)

        def ID(self):
            return self.getToken(PieroguszParser.ID, 0)

        def RPAREN(self):
            return self.getToken(PieroguszParser.RPAREN, 0)

        def getRuleIndex(self):
            return PieroguszParser.RULE_readCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadCall" ):
                listener.enterReadCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadCall" ):
                listener.exitReadCall(self)




    def readCall(self):

        localctx = PieroguszParser.ReadCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_readCall)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(PieroguszParser.READ)
            self.state = 134
            self.match(PieroguszParser.LPAREN)
            self.state = 135
            self.match(PieroguszParser.ID)
            self.state = 136
            self.match(PieroguszParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(PieroguszParser.ValueContext,0)


        def conversion(self):
            return self.getTypedRuleContext(PieroguszParser.ConversionContext,0)


        def logicalExpression(self):
            return self.getTypedRuleContext(PieroguszParser.LogicalExpressionContext,0)


        def additiveExpression(self):
            return self.getTypedRuleContext(PieroguszParser.AdditiveExpressionContext,0)


        def LPAREN(self):
            return self.getToken(PieroguszParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(PieroguszParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(PieroguszParser.RPAREN, 0)

        def structureInstantiation(self):
            return self.getTypedRuleContext(PieroguszParser.StructureInstantiationContext,0)


        def fieldAccess(self):
            return self.getTypedRuleContext(PieroguszParser.FieldAccessContext,0)


        def getRuleIndex(self):
            return PieroguszParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = PieroguszParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expression)
        try:
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.value()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.conversion()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 140
                self.logicalExpression()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 141
                self.additiveExpression(0)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 142
                self.match(PieroguszParser.LPAREN)
                self.state = 143
                self.expression()
                self.state = 144
                self.match(PieroguszParser.RPAREN)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 146
                self.structureInstantiation()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 147
                self.fieldAccess()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PieroguszParser.RULE_logicalExpression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class EqualContext(LogicalExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PieroguszParser.LogicalExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def simpleLogicalExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PieroguszParser.SimpleLogicalExpressionContext)
            else:
                return self.getTypedRuleContext(PieroguszParser.SimpleLogicalExpressionContext,i)

        def EQ(self):
            return self.getToken(PieroguszParser.EQ, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEqual" ):
                listener.enterEqual(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEqual" ):
                listener.exitEqual(self)


    class NegationContext(LogicalExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PieroguszParser.LogicalExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EXCLAMATION(self):
            return self.getToken(PieroguszParser.EXCLAMATION, 0)
        def simpleLogicalExpression(self):
            return self.getTypedRuleContext(PieroguszParser.SimpleLogicalExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNegation" ):
                listener.enterNegation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNegation" ):
                listener.exitNegation(self)


    class OrContext(LogicalExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PieroguszParser.LogicalExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def simpleLogicalExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PieroguszParser.SimpleLogicalExpressionContext)
            else:
                return self.getTypedRuleContext(PieroguszParser.SimpleLogicalExpressionContext,i)

        def OR(self):
            return self.getToken(PieroguszParser.OR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOr" ):
                listener.enterOr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOr" ):
                listener.exitOr(self)


    class BoolContext(LogicalExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PieroguszParser.LogicalExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOOL(self):
            return self.getToken(PieroguszParser.BOOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool" ):
                listener.enterBool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBool" ):
                listener.exitBool(self)


    class AndContext(LogicalExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PieroguszParser.LogicalExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def simpleLogicalExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PieroguszParser.SimpleLogicalExpressionContext)
            else:
                return self.getTypedRuleContext(PieroguszParser.SimpleLogicalExpressionContext,i)

        def AND(self):
            return self.getToken(PieroguszParser.AND, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnd" ):
                listener.enterAnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnd" ):
                listener.exitAnd(self)


    class XorContext(LogicalExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PieroguszParser.LogicalExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def simpleLogicalExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PieroguszParser.SimpleLogicalExpressionContext)
            else:
                return self.getTypedRuleContext(PieroguszParser.SimpleLogicalExpressionContext,i)

        def XOR(self):
            return self.getToken(PieroguszParser.XOR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterXor" ):
                listener.enterXor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitXor" ):
                listener.exitXor(self)


    class SimpleBoolValueContext(LogicalExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PieroguszParser.LogicalExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def simpleLogicalExpression(self):
            return self.getTypedRuleContext(PieroguszParser.SimpleLogicalExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleBoolValue" ):
                listener.enterSimpleBoolValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleBoolValue" ):
                listener.exitSimpleBoolValue(self)



    def logicalExpression(self):

        localctx = PieroguszParser.LogicalExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_logicalExpression)
        try:
            self.state = 170
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = PieroguszParser.OrContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self.simpleLogicalExpression()
                self.state = 151
                self.match(PieroguszParser.OR)
                self.state = 152
                self.simpleLogicalExpression()
                pass

            elif la_ == 2:
                localctx = PieroguszParser.XorContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.simpleLogicalExpression()
                self.state = 155
                self.match(PieroguszParser.XOR)
                self.state = 156
                self.simpleLogicalExpression()
                pass

            elif la_ == 3:
                localctx = PieroguszParser.AndContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 158
                self.simpleLogicalExpression()
                self.state = 159
                self.match(PieroguszParser.AND)
                self.state = 160
                self.simpleLogicalExpression()
                pass
